--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <div class="project_article">
                         <h4 style="color: yellow;">TCI Product Tracing System</h4>
                         <h5 style="color:palevioletred">Web / Mobile - C# /Vue.js</h5>
-                        <p>I build a backend platform for enterprise's user batchly generate / decoding specific QRcode. These QRcode can bind Product/Box/Carton together. During binding process,I encrypt QRcode so everytime customer scans these Encrypted QRcode would redirect to Product indtroduction Page that I desinged. With this system, Enterprise can globally trace merchandise from Logistics to costomers for further BI survey.</p>
+                        <p>I build a backend platform for enterprise's user batchly generate / decoding specific QRcode. These QRcode can bind Product/Box/Carton together. During binding process, my program would encrypt QRcode so everytime customer scans these QRcode would redirect to Product indtroduction Page that I desinged. With this system, Enterprise can globally trace merchandise from Logistics to costomers for further BI survey.</p>
                     </div>
                     <div class="clear"></div>
                 </div>
