--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="mailto:zx255087@htomail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li>
+						<li>&copy; DavidSun 2021</li>
 					</ul>
 				</div>
 			</footer>
