--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am David</strong>, a software developer with 4+ years medical field background(was a emergency medical staff before 2020)<br />
+					<h1><strong>I am David</strong>, a software developer specializing in C#, ASP.NET, Vue.js.
+						 4+ years medical background(was a emergency staff before 2020)<br />
 						</h1>
 				</div>
 			</header>
@@ -64,26 +65,29 @@
 									<h2 style="color:green">Work Experience</h2>
 									<ul>
 										<li style="list-style:none">
-											<h4>
+											<h5>
 												Full-stack Developer - <a href="https://www.tci-bio.com/zh-tw/intro">TCI CO., Ltd Taipei, Taiwan</a>&emsp;-&emsp;11/2020 ~ Present
-											</h4>
+											</h5>
 										</li>
 										<li style="list-style:none">
-											<h4 style="color: brown;">Establish QRcode - Product Tracing System</h4>
+											<h5 style="color: brown;">Build QRcode - Product Tracing System</h5>
 										</li>
-										<li><h4 style="color: brown;">Build Merchandise QRcode generating / decoding / binding Platform</h4></li>
-										<li><h4 style="color: brown;">Product History Pages Automatically generated Platform </h4> </li>
-										<li><h4 style="color: brown;">Maintaining and Develop TCI EIP System.</h4></li>
+										<li><h5 style="color: brown;">Simplify TCI employees's work, bring extra value to the enterprise.</h5></li>
+										<li><h5 style="color: brown;">Establish Merchandise QRcode generating / decoding / binding Platform.</h5></li>
+										<li><h5 style="color: brown;">Product History Pages Automatically generated Platform.</h5></li>
+										<li><h5 style="color: brown;">Responsible for application code and designing.</h5></li>
+										<li><h5 style="color: brown;">Maintaining and Develop TCI EIP System.</h5></li>
 									</ul>
 									<ul>
 										<li style="list-style:none">
-											<h4>
+											<h5>
 												Full-stack Engineer - <a href="http://www.esunergy.com/">Sunergy Technology Taipei, Taiwan</a>&emsp;-&emsp;07/2020 ~ 11/2020
-											</h4>
+											</h5>
 										</li>
-										<li><h4 style="color: brown;">Developing customized web application for clients.</h4></li>
-										<li><h4 style="color: brown;">Maintaining and Modify existing program.</h4></li>
-										<li><h4 style="color: brown;">Deploy web-app to AWS and IIS.</h4></li>
+										<li><h5 style="color: brown;">Developing customized web application for clients.</h5></li>
+										<li><h5 style="color: brown;">Requirement analyzing and coding.</h5></li>
+										<li><h5 style="color: brown;">Maintaining and Modify existing program.</h5></li>
+										<li><h5 style="color: brown;">Deploy web-app to AWS and IIS.</h5></li>
 									</ul>
 									
 								</div>
@@ -142,12 +146,16 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>Have any question or want to work together? Please Contact me.</p>
+						<p>Have any question or want to work together?<br>Please Contact me.</p>
 						<div class="col-4 col-12-small">
 							<a href="https://www.instagram.com/davidsun818/"><img src="img/ig.png" alt="#" width="35" height="35"></a>
 							<a href="https://line.me/ti/p/bN2A21xler"><img src="img/line.png" alt="#" width="35" height="35"></a>
 							<a href="mailto:zx255087@htomail.com"><img src="img/mail.png" alt="mailto:zx255087@htomail.com" width="35" height="35"></a>
 							<ul class="labeled-icons">
+								<li>
+									<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
+									+886-921-363-691
+								</li>
 								<li>
 									<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
 									<a href="mailto:zx255087@htomail.com">zx255087@hotmail.com</a>
