--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>I am David</strong>, a software developer specializing in C#, ASP.NET, Vue.js.
-						 4+ years medical background(was a emergency staff before 2020)<br />
+						 4+ years medical background(was an emergency staff before 2020)<br />
 						</h1>
 				</div>
 			</header>
