--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<header class="major">
 							<h2>About me</h2>
 						</header>
-						<h4 style="color: brown;">I am passionate about building excellent software,
+						<h4 style="color: brown;">I am passionate about developing software,
 							I enjoy turning complex problems into simple, beautiful and intuitive designs. ...</h4>
 						<div v-if="isLearnMore">
 							<div class="row">
@@ -74,7 +74,7 @@
 											<h5 style="color: brown;">Build QRcode - Product Tracing System</h5>
 										</li>
 										<li><h5 style="color: brown;">Simplify TCI employees's work, bring extra value to the enterprise.</h5></li>
-										<li><h5 style="color: brown;">Establish Merchandise QRcode generating / decoding / binding Platform.</h5></li>
+										<li><h5 style="color: brown;">Establish Merchandise QRcode Platform including generating / decoding / binding.</h5></li>
 										<li><h5 style="color: brown;">Product History Pages Automatically generated Platform.</h5></li>
 										<li><h5 style="color: brown;">Responsible for application code and designing.</h5></li>
 										<li><h5 style="color: brown;">Maintaining and Develop TCI EIP System.</h5></li>
@@ -85,10 +85,10 @@
 												Full-stack Engineer - <a href="http://www.esunergy.com/">Sunergy Technology Taipei, Taiwan</a>&emsp;-&emsp;07/2020 ~ 11/2020
 											</h5>
 										</li>
-										<li><h5 style="color: brown;">Developing customized web application for clients.</h5></li>
-										<li><h5 style="color: brown;">Requirement analyzing and coding.</h5></li>
-										<li><h5 style="color: brown;">Maintaining and Modify existing program.</h5></li>
-										<li><h5 style="color: brown;">Deploy web-app to AWS and IIS.</h5></li>
+										<li><h5 style="color: brown;">Developed customized web application for clients.</h5></li>
+										<li><h5 style="color: brown;">Requirement analyzed and coding.</h5></li>
+										<li><h5 style="color: brown;">Maintaining and Modified existing program.</h5></li>
+										<li><h5 style="color: brown;">Deployed web-app to server.</h5></li>
 									</ul>
 									
 								</div>
@@ -115,7 +115,7 @@
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 								<h3>TRA Working Schedule Checking applet</h3>
 								<h3>Winform App / Web / Mobile - C# /Vue.js</h3>
-								<p>TRA engine driver are shift workers,their working shift are complex and easily confused. Hence, I integrate their schedule, figure out some rules and build a small applet in order to save their time from checking work schedule every day.</p>
+								<p>TRA engine driver are shift workers,their working shift are complex and easily confused.In order to save their time from checking work schedule every day., I integrated their schedule, figured out some rules and build a small applet.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
