--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am David</strong>, a software developer specializing in C#, ASP.NET, Vue.js.
+					<h1><strong>I am David</strong>, a software developer specializing in C#, ASP.NET,AngularJS/Vue.js.
 						 4+ years medical background(was an emergency staff before 2020)<br />
 						</h1>
 				</div>
@@ -101,8 +101,16 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>Recent Work (All Independently Developed + Deployed )</h2>
 						<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+								<h3>TCI HR_Personnel Resume Platform (For Recruiting) </h3>
+								<h3>Web - C# /AngularJs、Vue.js</h3>
+								<p>
+									Applicant can easily fulfill their information through this platform, and my backend system would automatically inform HR and Supervisor for assessment, HR can simply click a button so my program will send a email(next hiring step/ offer/refuse) thorugh SMTP to Applicant. Not only store talents data, but also Massively decrease the time of hiring processing.
+								</p>
+							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>TCI Product Tracing System</h3>
@@ -123,12 +131,8 @@
 								<h3>Winform Application - C#</h3>
 								<p>My first application to practing programming skills. It allows player to change border size,speed and difficulties.</p>
 							</article>
+							
 							<!--<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
 								<h3>Nunc enim commodo aliquet</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
