--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 										<li><h4 style="color: brown;">- ASP.Net MVC5 + Entity Framwork</h4></li>
 										<li><h4 style="color: brown;">- HTML5/CSS/JavaScript</h4></li>
 										<li><h4 style="color: brown;">- Bootstrap Responsive Web Design</h4></li>
-										<li><h4 style="color: brown;">- Vue.js、JQuery</h4></li>
+										<li><h4 style="color: brown;">- AngularJS、Vue.js、JQuery</h4></li>
 										<li><h4 style="color: brown;">- Version Control : #Git/SVN</h4></li>
 										<li><h4 style="color: brown;">- RDBMS : MsSql、MySql、ProgresSql</h4></li>
 										<li style="list-style:none">
@@ -57,7 +57,7 @@
 											SPA development with separation of frontend and backend
 										</h4>
 									</li>
-									<li><h4 style="color: brown;">- Vue.js + ASP.NET Web API</h4></li>
+									<li><h4 style="color: brown;">- AngularJS、Vue.js + ASP.NET Web API</h4></li>
 									<li><h4 style="color: brown;">- Using Axios to Consume Backend APIs</h4></li>
 									<li><h4 style="color: brown;">- Backend Repository/Service Design Pattern</h4></li>
 									</ul>
