--- a/index.html
+++ b/index.html
@@ -155,17 +155,18 @@
 						<div class="col-4 col-12-small">
 							<a href="https://www.instagram.com/davidsun818/"><img src="img/ig.png" alt="#" width="35" height="35"></a>
 							<a href="https://line.me/ti/p/bN2A21xler"><img src="img/line.png" alt="#" width="35" height="35"></a>
+							<a href="https://www.linkedin.com/in/davidsun818/"><img src="img/linkedin.png" alt="#" width="35" height="35"></a>
 							<a href="mailto:zx255087@htomail.com"><img src="img/mail.png" alt="mailto:zx255087@htomail.com" width="35" height="35"></a>
 							<ul class="labeled-icons">
 								<!-- <li>
 									<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
 									+886-921-363-691
 								</li> -->
-								<li>
+								<!-- <li>
 									<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
 									<a href="mailto:zx255087@htomail.com">zx255087@hotmail.com</a>
 									
-								</li>
+								</li> -->
 							</ul>
 						</div>
 						<!--<div class="row">
@@ -511,7 +512,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="https://www.instagram.com/davidsun818/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://line.me/ti/p/bN2A21xler" class="icon brands fa-line"><span class="label">Line</span></a></li>
 						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/davidsun818/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						<li><a href="mailto:zx255087@htomail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+					
 					</ul>
 					<ul class="copyright">
 						<li>&copy; DavidSun 2021</li>
