--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 										<li><h5 style="color: brown;">Kiosk system for patient check-in.</h5></li>
 										<li><h5 style="color: brown;">AssistClient system for medical examiner check blood tube detail and finish their job.</h5></li>
 										<li><h5 style="color: brown;">Calling Infomation Screen including advertising display.</h5></li>
-										<li><h5 style="color: brown;">CTTS(Text To Speech) system.</h5></li>
+										<li><h5 style="color: brown;">TTS(Text To Speech) system.</h5></li>
 										<li><h5 style="color: brown;">Dashboard (Task, Employee management. Report showing and download, device remote control etc.).</h5></li>
 										<li><h5 style="color: brown;">Packet Program for Communicate between software and hardware.</h5></li>
 										<li><h5 style="color: brown;">Exchange data between Tmc server and His, Lis.</h5></li>
